<resources>
    <string name="app_name">Care Together</string>
    <string name="account">အကောင့်</string>
    <string name="to_avoid">ဆောင်ရန်/ရှောင်ရန်</string>
    <string name="situation">အခြေအနေ</string>
    <string name="emergenc_call">အရေးပေါ်ဖုန်း</string>
    <string name="notification">သတင်းများ</string>
    <string name="touched_people"> မှစ၍  CareTogether ကွန်ယက်အတွင်းမှ သုံးစွဲသူများထဲမှ ဖုန်း </string>
    <string name="touched_people2"> လုံးနှင့် ချိတ်ဆက်ထားပြီးဖြစ်ပါသည်။</string>
    <string name="title_account">ကိုယ်ပိုင် ဗိုင်းရပ်စ်စောင့်ကြည့်ခန်း</string>
    <string name="no_contact_with_user">CareTogether ကွန်ယက်အတွင်းမှ သုံးစွဲသူများနှင့် ချိတ်ဆက်ထားခြင်းမရှိသေးပါ။</string>
    <string name="no_contact_with_confirm">✺ CareTogether မှ သင့်ဖုန်းထဲမှာ မှတ်သားထားသော အချက်အလက်များအရ ရောဂါပိုးရှိသူနှင့် နီးစပ်(ထိတွေ့)ခဲ့ဖူးခြင်း မရှိသေးပါ။
\n\n✺ အကယ်၍ သင်နှင့် ချိတ်ဆက်ဖူးသူတဦးဦးမှ အတည်ပြုလူနာဖြစ်သွားပါက ဤ‌နေရာတွင် သတိပေး အကြောင်းကြားပေးသွားပါမည်။
\n\n✺ ယခုအခြေအနေကို ထိန်းသိမ်းထားရန် အတတ်နိုင်ဆုံး သင့်အိမ်တွင်နေထိုင်ရန် တိုက်တွန်းအပ်ပါသည်။</string>
    <string name="about_application">App အကြောင်း</string>
    <string name="privacy_policy">အချက်အလက်ဆိုင်ရာမူဝါဒ</string>
    <string name="waiting">ခေတ္တစောင့်ပါ  ...</string>
    <string name="qr_code_scan">ကိုယ်ပိုင်ကုတ်နံပါတ်</string>
    <string name="delete">ဖျက်မည်</string>
    <string name="clear_cache">သိမ်းဆည်းထားသောဒေတာများဖျက်မည်</string>
    <string name="require_internet">ထိတွေ့ခဲ့သောလူများထဲမှ ဗိုင်းရပ်စ် သံသယလူနာ အဖြစ် စောင့်ကြည့်ခံရသူ အရေအတွက်ကို သိရှိနိုင်ရန် Internet Connection လိုအပ်ပါသည်။</string>
    <string name="require_internet2">သက်ဆိုင်ရာအချက်အလက်များအား ကြည့်ရှုနိုင်ရန် Internet Connection လိုအပ်ပါသည်။</string>
    <string name="update_available">နောက်ဆုံးထွက် ဗားရှင်း </string>
    <string name="permission_on">App သုံးသူအချင်းချင်း ချိတ်ဆက်မှတ်သားနိုင်ရန်အတွက် Bluetooth / GPS များဖွင့်ထားရန် \nလိုအပ်နေပါသည်။</string>
    <string name="update_available_2"> အား ရယူနိုင်ပါပြီ</string>
    <string name="title_file_permissions_off">File Permissions off!</string>
    <string name="b1_file_permissions_off">အချက်အလက်များ သိမ်းဆည်း/ရယူရန် အတွက်\n
လုပ်ဆောင်ခွင့် မပေးထားပါ !</string>
    <string name="b2_file_permissions_off">ရှေ့ဆက်လုပ်ဆောင်ရန်အတွက်  Setting ထဲရှိ\n
File Permission Option အား\n
ပြောင်းလဲပေးရန် လိုအပ်ပါသည်။</string>

    <string name="title_location_sharing_off">Location Sharing off!</string>
    <string name="b1_location_sharing_off">တည်နေရာပြခြင်း Setting အား \nဖွင့်ထားခြင်းမရှိပါ !</string>
    <string name="b2_location_sharing_off">တည်နေရာပြခြင်း Setting အား \nဖွင့်ထားရန် လိုအပ်ပါမည်</string>

    <string name="count_caretogether_touched">သင်နှင့် ချိတ်ဆက်ဖူးသည့် သူများထဲတွင် အတည်ပြုလူနာအဖြစ် သတ်မှတ်ခံထားရသူ \nမရှိသေးပါ</string>
    <!--    <string name="identified_caretogether">နီးစပ်ဖူးသူများထဲမှ ဗိုင်းရပ်စ် ရောဂါပိုးတွေ့ရှိသူ (၁) ဦး တွေ့ရှိထားပါသည်။</string>-->
    <string name="identified_caretogether">သင်နှင့် ချိတ်ဆက်ဖူးသည့် သူများထဲတွင် အတည်ပြုလူနာအဖြစ် သတ်မှတ်ခံထားရသူ  </string>
    <string name="identified_caretogether2"> ဦး တွေ့ရှိထားပါသည်။</string>
    <string name="safe_one">၁။ အိမ်တွင်လုံခြုံစွာနေခြင်းဖြင့် ရောဂါပိုးမပြန့်နှံ့အောင်ကူညီပါ။</string>
    <string name="safe_two">၂။ မဖြစ်မနေ အပြင်ထွက်ရမည်ဆိုပါက Mask တပ်ပြီးမှထွက်ပါ။</string>
    <string name="safe_three">၃။ ကျန်းမာရေးနှင့်အားကစားဝန်ကြီးဌာနမှ လမ်းညွှန်ချက်များအတိုင်း သေချာလိုက်နာဆောင်ရွက်ပါ။</string>
    <string name="safe_four">၄။ အတည်ပြုလူနာနှင့် ထိတွေဖူးသူဖြစ်သဖြင့် အရေးပေါ်ဖုန်းနံပါတ်များစာမျက်နာတွင် ဖော်ပြထားသော  သက်ဆိုင်ရာ ဖုန်းနံပါတ်အား အမြန်ဆုံးဆက်သွယ်အကြောင်းကြားရန် အသိပေးအပ်ပါသည်။</string>

    <!--    <string name="app_idea">ကနဦး ဗိုင်းရပ်စ် ကူးစက်မှုဖြစ်ပွားခံခဲ့ကြရသော အိမ်နီးချင်းနိုင်ငံများ၏ ကြုံတွေ့ခဲ့ရသည့် သင်ခန်းစာများကို လေ့လာခဲ့ပါသည်။ ထို့နည်းတူ မြန်မာနိုင်ငံသားများ ပါဝင်ပူးပေါင်းဆောင် ရွက်နိုင်မည့် (အချင်းချင်း အပြန်အလှန် ယုံကြည့်မှု ရရှိနိုင်မည့်) ဤနည်းစနစ်အား Za Information Technology Co.,Ltd. ၏ CTO ဖြစ်သူ ဦးရဲသူစိုး မှ စိတ်ကူးအကြံဉာဏ်ရရှိ၍ အကောင်အထည်ဖော်ပြုလုပ်ခဲ့ပါသည်။</string>-->

    <string name="right_news">ယခုအခါ ဗိုင်းရပ်စ် ရောဂါနှင့်ပတ်သတ်၍ ပြည်သူများ အထိတ်တလန့်ဖြစ်စေရန်ရည်ရွယ်ပြီး သတင်းစာမျက်နှာအတုများ Facebook Page အတုများမှ တစ်ဆင့် သတင်းအမှားများကိုဖြန့်ဝေလျက်ရှိပါသောကြောင့် အောက်ဖော်ပြပါ သတင်းစာမျက်နှာများနှင့် Facebook Page များမှ သတင်းအမှန်များကိုသာ ယုံကြည်ကြရန် အသိပေးအပ်ပါသည်</string>

    <string name="label_mm_zawgyi">ျမန္မာေဇာ္ဂ်ီ</string>
    <string name="label_mm_uni">မြန်မာယူနီကုဒ်</string>
    <string name="label_choose_font">အသုံးပြုမည့်ဖောင့်ကို ရွေးချယ်ပါ။</string>
    <string name="label_zawgyi_or_uni">ဇော်ဂျီ (သို့) ယူနီကုဒ် တစ်ခုခုကိုရွေးချယ်ပါ</string>
    <string name="action_choose">ရွေးချယ်မည်</string>
    <string name="confirm_delete">Covid 19 ရောဂါထိန်းချုပ်ရေးအတွက် \nစုဆောင်းရယူထားသော အချက်အလက်များကို \nဖုန်းအတွင်းမှ ဖျက်သိမ်းရန် အတည်ပြုမည်</string>

    <string name="confirm_no">မဖျက်ပါ</string>
    <string name="confirm_yes">ဖျက်မည်</string>

    <string name="sender_area">ပေးပို့သူသည် သတ်မှတ်ဆေးရုံများ၏ ဧရိယာအတွင်း၌ရောက်ရှိနေမှသာ အချက်အလက်များကိုပေးပို့နိူင်မည် ဖြစ်ပါသည်။</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
