<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/round_bg_white_10dp"
    android:orientation="vertical"
    android:padding="16dp">

    <com.za.caretogether.widgets.MMTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="Clear Data !"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <com.za.caretogether.widgets.MMTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_delete"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.za.caretogether.widgets.MMButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_bg_white_10dp"
            android:text="@string/confirm_no"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.za.caretogether.widgets.MMButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_bg_btn_yellow_10dp"
            android:text="@string/confirm_yes"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>