<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    android:background="@drawable/round_bg_white_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_bg_white_10dp"
        android:orientation="vertical">

    <com.za.caretogether.widgets.MMTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/label_choose_font"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <com.za.caretogether.widgets.MMTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/label_zawgyi_or_uni"
        android:textColor="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_zawgyi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <CheckBox
                    android:id="@+id/checkbox_zawgyi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:button="@drawable/custom_checkbox_green"
                    android:checked="true"
                    android:visibility="gone"
                    android:layout_marginLeft="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/zawgyi" />

                <com.za.caretogether.widgets.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_mm_zawgyi"
                    android:textColor="@color/grey" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_uni"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="2"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <CheckBox
                    android:id="@+id/checkbox_uni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:button="@drawable/custom_checkbox_green"
                    android:checked="true"
                    android:layout_marginLeft="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:padding="16dp"
                    android:src="@drawable/unicode" />

                <com.za.caretogether.widgets.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_mm_uni"
                    android:textColor="@color/grey" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.za.caretogether.widgets.MMButton
        android:id="@+id/btn_choose_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_bg_btn_yellow_10dp"
        android:text="@string/action_choose"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>


</LinearLayout>

</androidx.cardview.widget.CardView>